# QuantForg

./: .dockerignore  .editorconfig  .env.example  .gitignore  .live-trade-verify.json  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION_IMPLEMENTATION_REPORT.md  BACKTEST_ENGINE_REPORT.md  BACKUP_RECOVERY.md  BETA_CHECKLIST.md  BETA_FEEDBACK_PLAN.md  BETA_LAUNCH_REPORT.md  BETA_ONBOARDING.md  BETA_OPERATIONS.md  BETA_READINESS_REPORT.md  BROKER_CERTIFICATION_REPORT.md  BROKER_COMPATIBILITY_REPORT.md  BROKER_CONNECTIVITY.md  BROKER_DATABASE_VERIFICATION_REPORT.md  BROKER_FOUNDATION_FINAL_REPORT.md  BROKER_FOUNDATION_REPORT.md  BROKER_FOUNDATION_SPRINT2_REPORT.md  CERTIFICATION_RESULT.md  CHANGELOG.md  CLOSED_BETA_GO_NO_GO.md  CLOSED_BETA_KIT.md  CLOSED_BETA_MONITORING.md  CLOSED_BETA_PRODUCTION_AUDIT.md  CLOSED_BETA_V6_1_RELEASE_CERTIFICATE.md  CLOUD_ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  DATABASE_VERIFICATION_REPORT.md  DECISION_ENGINE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EXECUTION_INTELLIGENCE.md  (+58 more)
.cursor/rules/: quantforg-design-bible.mdc  quantforg-os-baseline.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: architecture_decision.md  bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml
alembic/: __init__.py  env.py  script.py.mako
alembic/versions/: .gitkeep  0001_baseline.py
app/: __init__.py  main.py  minimal_asgi.py  raw_asgi.py
app/application/: __init__.py
app/domain/: __init__.py
app/infrastructure/: __init__.py
app/presentation/: __init__.py  dto_mapping.py
app/strategies/: __init__.py
core/: __init__.py
core/config/: __init__.py  environments.py  frontend_origins.py  settings.py
core/database/: __init__.py  session.py
core/di/: __init__.py  container.py
core/logging/: __init__.py  setup.py
core/security/: __init__.py  credential_encryption.py  crypto.py  headers.py
core/utils/: __init__.py  identifiers.py  timing.py
deploy/mt5_gateway/: Dockerfile  docker-compose.yml  gateway.env.example  quantforg-mt5-gateway.service  windows-service.ps1
docker/: docker-compose.yml
docker/postgres/: init.sql
docs/: INSTITUTIONAL_TRADING_ENGINE_V1.md  README.md  application.md  architecture-governance.md  architecture.md  configuration.md  deployment.md  development.md  domain.md  events-and-market-data.md  fair-value-gap.md  file-reference.md  liquidity.md  market-context.md  market-structure.md  order-block.md
docs/adr/: 0001-clean-architecture.md  0002-domain-driven-design.md  0003-event-driven-architecture.md  0004-utc-everywhere.md  0005-decimal-only.md  0006-plugin-architecture.md  0007-analysis-pipeline.md  0008-market-analysis-snapshot.md  0009-versioned-domain-events.md  0010-analysis-never-trades.md  0011-domain-events-vs-integration-events.md  0012-strategy-is-plugin.md  0013-risk-engine-independent.md  0014-mt5-is-adapter.md  0015-ai-is-advisor.md  0016-trading-os-information-architecture.md  0017-continuously-releasable-frontend-baseline.md  0018-terminal-os-flagship-shell.md  0019-book-os-portfolio-operating-system.md  0020-research-os-workflow-shell.md  0021-counsel-os-decision-operating-system.md  0022-design-bible-and-product-governance.md  README.md
docs/design/: README.md  accessibility.md  component-acceptance-checklist.md  design-tokens.md  feature-acceptance-checklist.md  feature-lifecycle.md  performance-budgets.md  product-governance.md  typography.md  ux-principles.md
docs/engineering/: ArchitectureReviewChecklist.md  BranchStrategy.md  CodeReviewChecklist.md  CodingStandards.md  CommitConvention.md  DefinitionOfDone.md  README.md  ReleasePolicy.md  SecurityPolicy.md  TestingStandards.md  VersioningPolicy.md
docs/production/: ACCEPTANCE_REPORT_v1.0.1.md  AI_SCALPING_ENGINE_V4.md  AI_VALIDATION_V7.md  ARCHITECTURE_GUIDE.md  AUDIT_GOVERNANCE_REPORT_v1.0.1.md  DEPLOYMENT_GUIDE.md  FINAL_ACCEPTANCE_CERTIFICATION_v1.0.1.md  FINAL_ARCHITECTURE_REPORT_v1.0.1.md  FINAL_PRODUCTION_ACCEPTANCE_REPORT.md  INSTITUTIONAL_ALPHA_ENGINE_V5.md  INSTITUTIONAL_DATA_WAREHOUSE_REPORT_v1.0.1.md  INSTITUTIONAL_OBSERVABILITY_REPORT_v1.0.1.md  KNOWN_LIMITATIONS.md  LAUNCH_POLICY_DEMO_CERT_OPTIONAL.md  MIGRATION_NOTES_v1.0.0.md  OPERATIONS_GUIDE.md  OPTIMIZATION_REPORT_v1.0.1.md  PERFORMANCE_INTELLIGENCE_REPORT_v1.0.1.md  PERFORMANCE_LAB_V8.md  PORTFOLIO_INTELLIGENCE_V9.md  PRODUCTION_CHECKLIST.md  PRODUCTION_HARDENING_V6.md  PRODUCTION_READINESS_REPORT_v1.0.1.md  PRODUCTION_REVIEW.md  RAILWAY_HEALTHCHECK_FIX.md  README.md  RECOVERY_GUIDE.md  RELEASE_CANDIDATE_RC1.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_REPORT_v1.0.0.md  REPLAY_EVIDENCE_LAB_REPORT_v1.0.1.md  RESEARCH_PLATFORM_V10.md  STRATEGY_AUDIT_REPORT_v1.0.1.md  (+1 more)
frontend/: .env.example  FRONTEND_IMPLEMENTATION_PLAN.md  FRONTEND_PROGRESS.md  README.md  UI_COMPONENT_INVENTORY.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
openapi/: openapi.json  openapi.v1.0.0-rc1.json
scripts/: acceptance_validation.py  audit_governance.py  backup_production_state.py  bootstrap.sh  candidate_validation.py  check-design-governance.ps1  check-design-governance.sh  config_audit.py  docker-entrypoint.sh  final_acceptance_certification.py  institutional_data_warehouse.py  institutional_execution_validation.py  institutional_observability.py  institutional_soak.py  launch_readiness.py  live_execution_witness.py  load_test_asgi.py  micro_account_feasibility.py  penetration_attack_harness.py  perf_hardening_report.py  performance_intelligence.py  prod_api_audit_local.py  prod_smoke_broker.py  railway_self_check.py  replay_evidence_lab.py  run_uvicorn_local.sh  smoke_health_local.py  strategy_audit.py  threshold_performance_analysis.py  threshold_sensitivity_report.py  trading_operations_center.py  verify_migrations.sh  verify_pg_health_local.py  verify_rollback_pairs.sh  wait-for-deps.sh
services/: __init__.py
supabase/: .gitignore  config.toml  seed.sql
tests/: __init__.py  conftest.py
(+2132 files in other folders)
